1.0.5 (11.05.2012):

* Allow new processes to be started after pressing cancel button
* Fixed paste menu
  Closes bug 3517797 (Copy and paste no longer work)
* Pad scans which have less data than their headers announce with blanks
  Closes bug 3480247 (No image from HP6500A ADF)


1.0.4 (11.04.2012):

* Fixed Clean Up (unpaper) dialog


1.0.3 (08.04.2012):

* Refactor switch usage to satisfy Perl 5.10.
  Closes bug 3514239 (gscan2pdf won't load)
* Support page-width and page-height options with libsane-perl frontend
  Closes bug 3441159 (Page size cannot be changed)
  Closes bug 3052205 (Cannot set paper size)
* Update to Russian translation (thanks to Oleg Koptev)


1.0.2 (27.03.2012):

* Fixed ocropus support
  Closes bug 3487120 (Ocropus no longer in OCR selection)
* Reference core font in PDF only once
* Add more language codes for Tesseract and Cuneiform
* + Tesseract 3.02 support
  Closes Debian bug #665871
* Fixed Perl exiting when restoring a crashed session
* Don't add corrupted page if error is thrown copying the image
  Closes Debian bug #663584
* Fix restore crashed session
  Closes Debian bug #664635
* Update to German translation (thanks to Daniel Dietrich)
* Update to Russian translation (thanks to Artem Karimov)
* Update to Spanish translation (thanks to Fitoschido)
* Update to Turkish translation (thanks to Utku BERBEROĞLU)
* Update to Ukranian translation (thanks to Сергій Дубик)


1.0.1 (05.02.2012):

* Fixed metadata in PDF
  Closes Debian bug #653918
  Thanks to Sebastian Schmidt for the patch
* Embed TTF in PDF only once
  Closes Debian bug #646298
  Thanks to noreply@example.com for the patch
* Decode HTML entities returned by Ocropus
  Closes Debian bug #646246
  Thanks to noreply@example.com for the patch
* Fixed saving PS
* Optionally start viewer after saving
  Closes Debian bug #651666
* Fixed email as PDF. Closes bug 3459124
* Fixed error message importing DjVu with spaces in filename
* Support multiple sessions