@@ -5304,8 +5304,8 @@ sub update_number {
 
 sub scanimage {
  my (
-  $device,   $npages,  $offset, $step, $rfacing,
-  $rreverse, $unpaper, $ocr,    %options
+  $device,   $npages,       $offset, $step, $rfacing,
+  $rreverse, $unpaper_flag, $ocr,    %options
  ) = @_;
 
  require IPC::Open3;
@@ -5402,7 +5402,7 @@ sub scanimage {
         sub {
          return TRUE unless ( -e "out$id.pnm" );
          my $index = import_scan( "out$id.pnm", $id * $step + $offset,
-          $SETTING{resolution}, TRUE, $rotate, $unpaper, $ocr );
+          $SETTING{resolution}, TRUE, $rotate, $unpaper_flag, $ocr );
          $num_scans++;
          return FALSE;
         }
@@ -5484,7 +5484,7 @@ sub scanimage {
  else {
   my $rotate = 1 % 2 ? $rfacing : $rreverse;
   my $index = import_scan( $test_image, 1 * $step + $offset,
-   $SETTING{resolution}, FALSE, $rotate, $unpaper, $ocr );
+   $SETTING{resolution}, FALSE, $rotate, $unpaper_flag, $ocr );
  }
  return;
 }
@@ -5493,8 +5493,8 @@ sub scanimage {
 
 sub scanadf {
  my (
-  $device,   $npages,  $offset, $step, $rfacing,
-  $rreverse, $unpaper, $ocr,    %options
+  $device,   $npages,       $offset, $step, $rfacing,
+  $rreverse, $unpaper_flag, $ocr,    %options
  ) = @_;
 
  require IPC::Open3;
@@ -5614,7 +5614,7 @@ sub scanadf {
         sub {
          return TRUE unless ( -e "out$id.pnm" );
          my $index = import_scan( "out$id.pnm", $id * $step + $offset,
-          $SETTING{resolution}, TRUE, $rotate, $unpaper, $ocr );
+          $SETTING{resolution}, TRUE, $rotate, $unpaper_flag, $ocr );
          $spbar->set_text(
           sprintf( $d->get('Scanning page %i...'), $id * $step + $offset ) );
          $id++;
@@ -5693,7 +5693,7 @@ sub update_spbar {
 }
 
 sub scan_pages {
- my ( $npages, $start, $step, $rfacing, $rreverse, $unpaper, $ocr ) = @_;
+ my ( $npages, $start, $step, $rfacing, $rreverse, $unpaper_flag, $ocr ) = @_;
  my $i      = 1;
  my $format = "out%d.pnm";
 
@@ -5731,7 +5731,7 @@ sub scan_pages {
    # show an error
    my $rotate = $n % 2 ? $rfacing : $rreverse;
    if ( defined $test_image ) {
-    import_scan( $test_image, $n, undef, FALSE, $rotate, $unpaper, $ocr );
+    import_scan( $test_image, $n, undef, FALSE, $rotate, $unpaper_flag, $ocr );
    }
    else {
     $SETTING{resolution} =
@@ -5740,7 +5740,7 @@ sub scan_pages {
       : $Gscan2pdf::Document::POINTS_PER_INCH;
     $logger->info("Importing scan with resolution=$SETTING{resolution}");
     import_scan( File::Spec->catdir( $session, "out$n.pnm" ),
-     $n, $SETTING{resolution}, TRUE, $rotate, $unpaper, $ocr );
+     $n, $SETTING{resolution}, TRUE, $rotate, $unpaper_flag, $ocr );
    }
 
    update_spbar( $i, $npages );
@@ -5780,18 +5780,18 @@ sub hash2options {
 }
 
 sub post_process_scan {
- my ( $pages, $rotate, $unpaper, $ocr ) = @_;
+ my ( $pages, $rotate, $unpaper_flag, $ocr ) = @_;
 
  if ($rotate) {
   rotate(
    $rotate, $pages,
    sub {
     my ($pages) = @_;
-    post_process_scan( $pages, undef, $unpaper, $ocr );
+    post_process_scan( $pages, undef, $unpaper_flag, $ocr );
    }
   );
  }
- elsif ($unpaper) {
+ elsif ($unpaper_flag) {
   unpaper_page(
    $pages,
    $unpaper->get_cmdline,
@@ -5810,7 +5810,8 @@ sub post_process_scan {
 # Take new scan and display it
 
 sub import_scan {
- my ( $ofilename, $page, $resolution, $delete, $rotate, $unpaper, $ocr ) = @_;
+ my ( $ofilename, $page, $resolution, $delete, $rotate, $unpaper_flag, $ocr ) =
+   @_;
 
  # Interface to frontend
  open my $fh, '<', $ofilename or die "can't open $ofilename: $!";   ## no critic
@@ -5879,7 +5880,7 @@ sub import_scan {
     }
     else {
      update_uimanager();
-     post_process_scan( [$gpage], $rotate, $unpaper, $ocr );
+     post_process_scan( [$gpage], $rotate, $unpaper_flag, $ocr );
     }
     return FALSE;    # uninstall
    }
